examples/test/testpolicy13260.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13260
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key42: value12
      key37: value2
      key14: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value30
          key28: value25
          key13: value39
